[shenker/cloning] As used on 220321 to order the remaining orientations of BsaI barcode placeholders. Updated notebook to new fLIB_fragments convention.

--- a/paulssonlab/src/paulssonlab/shenker/cloning/220321 Barcode placeholders.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/cloning/220321 Barcode placeholders.ipynb
@@ -7,13 +7,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import random\n",
     "import toml\n",
     "import pygsheets\n",
     "from tqdm.auto import tqdm\n",
     "import Bio.Restriction as Restriction\n",
     "from Bio.Seq import Seq\n",
     "from Bio.SeqRecord import SeqRecord\n",
-    "import benchlingapi\n",
     "from itertools import product"
    ]
   },
@@ -36,14 +36,14 @@
    "outputs": [],
    "source": [
     "import paulssonlab.api as api\n",
-    "import paulssonlab.api.benchling as bapi\n",
     "from paulssonlab.api.util import base_url\n",
     "import paulssonlab.cloning.registry as registry\n",
     "import paulssonlab.cloning.workflow as workflow\n",
     "import paulssonlab.cloning.sequence as sequence\n",
     "import paulssonlab.cloning.enzyme as enzyme\n",
     "import paulssonlab.cloning.design as design\n",
-    "import paulssonlab.cloning.primers as primers"
+    "import paulssonlab.cloning.primers as primers\n",
+    "import paulssonlab.api.geneious as geneious"
    ]
   },
   {
@@ -54,6 +54,16 @@
    },
    "source": [
     "# Setup"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "11a0c5c8-2d1e-4709-ba91-a8fea6c6d09e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "random.seed(75)"
    ]
   },
   {
@@ -79,22 +89,26 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c7dacf63-b980-423d-a298-942a86d125f4",
+   "id": "ea1d98e1-aa12-400d-8318-1488d54e58f9",
    "metadata": {},
    "outputs": [],
    "source": [
-    "bench_session = benchlingapi.Session(config[\"benchling\"][\"api_key\"])\n",
-    "benchling_folder = bapi.get_project_root(bench_session, config[\"benchling\"][\"project\"])"
+    "geneious_sessionmaker = geneious.connect(**config[\"geneious\"])"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "72fb4bf4-2fe1-4f63-89d1-07f7b7aa0773",
+   "id": "cfee4262-264c-416e-86af-8242cbdabdd8",
    "metadata": {},
    "outputs": [],
    "source": [
-    "reg = registry.Registry(gc, config[\"registry\"][\"folder\"], benchling_folder)"
+    "reg = registry.Registry(\n",
+    "    gc,\n",
+    "    config[\"registry\"][\"folder\"],\n",
+    "    geneious_sessionmaker=geneious_sessionmaker,\n",
+    "    geneious_folder=\"registry\",\n",
+    ")"
    ]
   },
   {
@@ -112,10 +126,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lib_parts = reg[(\"LIB\", \"parts\")]\n",
     "olib_oligos = reg[(\"oLIB\", \"oligos\")]\n",
+    "plib_plasmids = reg[(\"pLIB\", \"plasmids\")]\n",
     "plib_maps = reg[(\"pLIB\", \"maps\")]\n",
-    "part_types = reg[(\"LIB\", \"parts\", \"Part types\")]"
+    "flib_fragments = reg[(\"fLIB\", \"fragments\")]\n",
+    "part_types = reg[(\"fLIB\", \"fragments\", \"Part types\")]"
    ]
   },
   {
@@ -168,9 +183,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "barcode_overhangs = workflow.overhangs_for(\n",
-    "    reg[(\"LIB\", \"parts\", \"Part types\")][\"Eaton_barcode\"]\n",
-    ")"
+    "barcode_overhangs = workflow.overhangs_for(part_types[\"Eaton_barcode\"])"
    ]
   },
   {
@@ -192,7 +205,7 @@
     "for flipped in (False, True):\n",
     "    for forward, orig_primer_name in zip((False, True), nonflipped_backbone_primers):\n",
     "        orig_primer_seq = olib_oligos[orig_primer_name][\"Sequence\"]\n",
-    "        overhang = lib_parts[barcode_uns][\"Sequence\"]\n",
+    "        overhang = flib_fragments.find({\"Name\": barcode_uns})[\"Sequence\"]\n",
     "        if flipped:\n",
     "            overhang = sequence.reverse_complement(overhang)\n",
     "        seq = primers.replace_primer_overhang(\n",
@@ -236,8 +249,8 @@
     "    \"Type\": \"Primer\",\n",
     "}\n",
     "\n",
-    "# apply = {\"Sequence\": workflow.normalize_seq}\n",
-    "apply = {\"Name\": None}\n",
+    "apply = {\"Sequence\": workflow.normalize_seq}\n",
+    "# apply = {\"Name\": None}\n",
     "\n",
     "for backbone_primer in backbone_primers.values():\n",
     "    olib_oligos.upsert(\n",
@@ -304,7 +317,7 @@
     "    **base,\n",
     "    \"Order date\": workflow.date(),\n",
     "    \"Vendor\": \"IDT\",\n",
-    "    \"Type\": \"Primer\",\n",
+    "    \"Type\": \"IDT Ultramer\",\n",
     "}\n",
     "\n",
     "part_base = {\n",
@@ -314,18 +327,23 @@
     "\n",
     "# apply = {\"Sequence\": workflow.normalize_seq}\n",
     "apply = {\"Name\": None}\n",
+    "overwrite = False\n",
     "\n",
-    "for enzyme_name, upstream, antiparallel in product(enzymes, (True,), (True,)):\n",
-    "    # for enzyme_name, upstream, antiparallel in product(enzymes, (True, False), (True, False)):\n",
+    "# for enzyme_name, upstream, antiparallel in product(enzymes, (True,), (True,)):\n",
+    "for enzyme_name, upstream, antiparallel in product(\n",
+    "    enzymes, (True, False), (True, False)\n",
+    "):\n",
     "    if upstream:\n",
     "        unses = (\"UNS9\", \"UNS1\")\n",
     "    else:\n",
     "        unses = (\"UNS10\", \"UNS9\")\n",
     "    placeholder = placeholders[enzyme_name]\n",
-    "    if flipped:\n",
+    "    if antiparallel:\n",
     "        placeholder = sequence.reverse_complement(placeholder)\n",
     "    seq = (\n",
-    "        lib_parts[unses[0]][\"Sequence\"] + placeholder + lib_parts[unses[1]][\"Sequence\"]\n",
+    "        flib_fragments.find({\"Name\": unses[0]})[\"Sequence\"]\n",
+    "        + placeholder\n",
+    "        + flib_fragments.find({\"Name\": unses[1]})[\"Sequence\"]\n",
     "    )\n",
     "    name = f\"barcode_ph_{enzyme_name}_{'upstream' if upstream else 'downstream'}{'_antiparallel' if antiparallel else ''}\"\n",
     "    description = f\"3G part with {unses[0]}/{unses[1]} flanks and {enzyme_name} placeholder{' (reversed)' if antiparallel else ''} for golden gating in Daniel Eaton's barcode library.\"\n",
@@ -340,6 +358,7 @@
     "            \"Sequence\": workflow.normalize_seq_upper(seq),\n",
     "        },\n",
     "        apply=apply,\n",
+    "        overwrite=overwrite,\n",
     "    )\n",
     "    oligo_id2 = olib_oligos.upsert(\n",
     "        {\n",
@@ -348,10 +367,12 @@
     "            \"Sequence\": workflow.normalize_seq_upper(sequence.reverse_complement(seq)),\n",
     "        },\n",
     "        apply=apply,\n",
+    "        overwrite=overwrite,\n",
     "    )\n",
     "    usage = f\"{oligo_id1}={oligo_id2}\"\n",
     "    part_row = {\n",
     "        **part_base,\n",
+    "        \"Name\": name,\n",
     "        \"Description\": description,\n",
     "        \"Sequence\": workflow.normalize_seq(seq),\n",
     "        \"Usage\": usage,\n",
@@ -360,7 +381,27 @@
     "        \"Downstream overhang\": \"\",\n",
     "        \"Species/codon usage\": \"E. coli\",\n",
     "    }\n",
-    "    lib_parts[name] = part_row"
+    "    flib_fragments.upsert(part_row, apply=apply, overwrite=overwrite)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0e926304-4dfa-4305-8b65-a56e67f8da4a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "olib_oligos.local"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7328afca-4797-41cb-bec2-fa868d9fb72d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "flib_fragments.local"
    ]
   },
   {
@@ -370,8 +411,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "olib_oligos.save()\n",
-    "lib_parts.save()"
+    "olib_oligos.commit()\n",
+    "flib_fragments.commit()"
    ]
   },
   {
@@ -420,13 +461,15 @@
    "outputs": [],
    "source": [
     "# flipped_, upstream_, ph_name = True, True, \"barcode_ph_BsaI_upstream_antiparallel\"\n",
-    "flipped_, upstream_, ph_name = False, True, \"barcode_ph_BsaI_upstream_antiparallel\"\n",
+    "flipped_, upstream_, ph_name = True, True, \"barcode_ph_BsaI_upstream_antiparallel\"\n",
     "\n",
-    "placeholder = lib_parts[ph_name][\"Sequence\"]\n",
+    "# TODO: use other primers for downstream\n",
+    "\n",
+    "ph = flib_fragments.find(\"Name\": ph_name)[\"Sequence\"]\n",
     "if flipped_:\n",
     "    primers_ = (\n",
     "        olib_oligos[\"oLIB177\"][\"Sequence\"],\n",
-    "        backbone_primers[\"JUMP_UNS9_flipped_r\"][\"Sequence\"],\n",
+    "        backbone_primers[\"JUMP_UNS9_flipped_f\"][\"Sequence\"],\n",
     "    )\n",
     "    nonbarcoded_primers = (\n",
     "        olib_oligos[\"oLIB177\"][\"Sequence\"],\n",
@@ -444,16 +487,16 @@
     "backbone_product = sequence.pcr(template, *primers_)\n",
     "nonbarcoded_backbone_product = sequence.pcr(template, *nonbarcoded_primers)\n",
     "dummy_insert = (\n",
-    "    lib_parts[\"UNS1\"][\"Sequence\"]\n",
+    "    flib_fragments.find(\"Name\": \"UNS1\")[\"Sequence\"]\n",
     "    + \"A\" * 30\n",
     "    + \"G\" * 5\n",
     "    + \"A\" * 10\n",
-    "    + lib_parts[\"UNS10\"][\"Sequence\"]\n",
+    "    + flib_fragments.find(\"Name\": \"UNS10\")[\"Sequence\"]\n",
     ")\n",
     "if upstream_:\n",
-    "    frags = [placeholder, dummy_insert, backbone_product]\n",
+    "    frags = [ph, dummy_insert, backbone_product]\n",
     "else:\n",
-    "    frags = [dummy_insert, placeholder, backbone_product]\n",
+    "    frags = [dummy_insert, ph, backbone_product]\n",
     "barcoded_product = sequence.assemble(frags, method=\"gibson\")\n",
     "nonbarcoded_product = sequence.assemble(\n",
     "    [dummy_insert, nonbarcoded_backbone_product], method=\"gibson\"\n",
@@ -473,235 +516,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d0f1c2a4-0b8f-44a9-8bbe-cabfd986a1cd",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sequence.assemble([placeholder, dummy_insert], method=\"gibson\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0a569fb4-dea0-4240-96c5-7b319bd794d6",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sequence.assemble([dummy_insert, backbone_product], method=\"gibson\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5b891b4e-4826-43d2-923a-07884d346730",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "barcoded_insert = (\n",
-    "    lib_parts[\"UNS9\"][\"Sequence\"]\n",
-    "    + \"A\" * 30\n",
-    "    + \"G\" * 5\n",
-    "    + \"A\" * 10\n",
-    "    + lib_parts[\"UNS10\"][\"Sequence\"]\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "79616e59-6807-4c39-be31-57fb0bad09f2",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "backbone_product"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "dc29e5ca-cd0d-4f44-95bd-daa2ace767c0",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "lib_parts[\"UNS10\"][\"Sequence\"]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4590dfa2-bbac-44ac-9bef-c053528913c8",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sequence.assemble([barcoded_insert, backbone_product], method=\"gibson\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7b3c7f51-2d95-4ed7-97ef-40a5bbbaedbe",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "frags"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "539ecc28-ebcd-42f5-acb0-7bc4d82f6692",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "nonbarcoded_product = sequence.assemble(\n",
-    "    [dummy_insert, nonbarcoded_backbone_product], method=\"gibson\"\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a82b76e6-3c98-452c-98d1-50759cb14d10",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sequence._assemble_gibson"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f4f0e3a8-2881-4fa1-a20b-e97b206d5297",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "x = sequence.assemble(frags[:2], method=\"gibson\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "20f0f286-1d61-4070-9ead-06c2923d6e26",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(x.seq)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4e251d59-845c-46c1-b193-6d9ffa576b7a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(frags[2].seq)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9afb16c9-e6ad-4886-9cc5-7b46f05128d4",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(frags[0].seq)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "335de812-cc45-4ff8-b23b-ac0258d9d279",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(frags[1])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f7a1d1e8-373e-4b51-8529-5448f6b17db6",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "lib_parts.local.keys()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "db5255fc-e265-4877-b20a-cb63809c0c88",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "nonbarcoded_product"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b8c58e41-faa2-4ca9-82e0-df7d98a62c5c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(barcoded_product.seq)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2024993b-8b27-4c80-96e8-d7bce227b007",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(nonbarcoded_product.seq)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f1883857-742e-4968-9274-bf4536d95f1a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(nonbarcoded_backbone_product.seq)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "08e1d225-5d83-4821-8a25-bc0ff224784c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(template.seq)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6ada0df3-8354-4669-af46-43bd3e661bdd",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "placeholder"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "011bea16-0450-40e2-8294-708e352cb357",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dummy_insert"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c98569f7-dbe7-4f02-b551-00bd5de155ca",
+   "id": "3cf6ddec-10e3-47ff-816d-4759a387b802",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -709,7 +524,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
