[shenker/cloning] Cluster all Cluzel FPs from Addgene.

--- a/paulssonlab/src/paulssonlab/shenker/cloning/220327 FP parts.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/cloning/220327 FP parts.ipynb
@@ -40,6 +40,7 @@
     "import paulssonlab.cloning.enzyme as enzyme\n",
     "import paulssonlab.cloning.design as design\n",
     "import paulssonlab.cloning.primers as primers\n",
+    "import paulssonlab.cloning.io as cio\n",
     "import paulssonlab.api.geneious as geneious"
    ]
   },
@@ -174,12 +175,28 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# %%time\n",
+    "# plasmids = {\n",
+    "#     row[\"Names\"]: plib_maps[id_]\n",
+    "#     for id_, row in plib_plasmids.items()\n",
+    "#     if \"cluzel-fp\" in row[\"Tags\"]\n",
+    "# }"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "%%time\n",
-    "plasmids = {\n",
-    "    row[\"Names\"]: plib_maps[id_]\n",
-    "    for id_, row in plib_plasmids.items()\n",
-    "    if \"cluzel-fp\" in row[\"Tags\"]\n",
-    "}"
+    "addgene_publication = api.addgene.get_addgene(\n",
+    "    \"https://www.addgene.org/browse/article/28192043/\"\n",
+    ")\n",
+    "plasmids = {}\n",
+    "for item in tqdm(addgene_publication[\"items\"]):\n",
+    "    name = item[\"plasmid\"]\n",
+    "    plasmids[name] = cio.read_http(item[\"sequence_urls\"][\"addgene_full\"][0])"
    ]
   },
   {
@@ -268,33 +285,11 @@
    "source": [
     "insert_ends = {\n",
     "    name: (\n",
-    "        \"XXX\" + seq.seq_lower()[:max_end_length],\n",
-    "        \"YYY\" + seq.seq_lower()[-max_end_length:][::-1],\n",
+    "        seq.seq_lower()[:max_end_length],\n",
+    "        seq.seq_lower()[-max_end_length:][::-1],\n",
     "    )\n",
     "    for name, seq in inserts.items()\n",
     "}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "insert_ends2 = {\n",
-    "    k: v\n",
-    "    for k, v in insert_ends.items()\n",
-    "    if k in (\"pEB2-mKate2\", \"pEB1-mGFPmut2\", \"pEB2-mScarlet\")\n",
-    "}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(\"\\n\".join(e[0] for e in insert_ends.values()))"
    ]
   },
   {
