[shenker/cloning,cloning] Move cluster_sequences_by_prefix and print_sequence_clusters into workflow.

--- a/paulssonlab/src/paulssonlab/shenker/cloning/220328 FP parts.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/cloning/220328 FP parts.ipynb
@@ -298,106 +298,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from collections import ChainMap\n",
-    "\n",
-    "\n",
-    "def cluster_by_prefix(d, start_index=0, num_subseqs=None, max_length=None):\n",
-    "    seqs = list(d.values())\n",
-    "    if num_subseqs is None:\n",
-    "        num_subseqs = min(len(seq) for seq in seqs)\n",
-    "    if max_length is None:\n",
-    "        max_length = max(len(subseq) for seq in seqs for subseq in seq[:num_subseqs])\n",
-    "    mismatch = False\n",
-    "    for idx in range(max_length):\n",
-    "        for subseq_idx in range(num_subseqs):\n",
-    "            base0 = seqs[0][subseq_idx][idx]\n",
-    "            if not all(seq[subseq_idx][idx] == base0 for seq in seqs[1:]):\n",
-    "                mismatch = True\n",
-    "                break\n",
-    "        if mismatch:\n",
-    "            break\n",
-    "    if not mismatch:\n",
-    "        # idx refers to the first mismatched base, so if no mismatches found, set to max_length\n",
-    "        idx += 1\n",
-    "    common_key = tuple(\n",
-    "        seqs[0][subseq_idx][start_index:idx] for subseq_idx in range(num_subseqs)\n",
-    "    )\n",
-    "    if idx > start_index:\n",
-    "        if idx == max_length:\n",
-    "            values = tuple(d.keys())\n",
-    "        else:\n",
-    "            values = cluster_by_prefix(\n",
-    "                d,\n",
-    "                start_index=idx,\n",
-    "                num_subseqs=num_subseqs,\n",
-    "                max_length=max_length,\n",
-    "            )\n",
-    "        res = {common_key: values, \"_size\": len(d)}\n",
-    "        return res\n",
-    "    else:\n",
-    "        clusters = {}\n",
-    "        for name, seq in d.items():\n",
-    "            key = tuple(\n",
-    "                seq[subseq_idx][start_index : idx + 1]\n",
-    "                for subseq_idx in range(num_subseqs)\n",
-    "            )\n",
-    "            clusters.setdefault(key, {})\n",
-    "            clusters[key][name] = seq\n",
-    "        res = ChainMap(\n",
-    "            {\"_size\": len(d)},\n",
-    "            *[\n",
-    "                cluster_by_prefix(\n",
-    "                    cluster,\n",
-    "                    start_index=idx,\n",
-    "                    num_subseqs=num_subseqs,\n",
-    "                    max_length=max_length,\n",
-    "                )\n",
-    "                for cluster in clusters.values()\n",
-    "            ],\n",
-    "        )\n",
-    "        return res\n",
-    "\n",
-    "\n",
-    "c = cluster_by_prefix(insert_ends)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import textwrap\n",
-    "\n",
-    "\n",
-    "def print_clusters(clusters, length=0, indent_level=0, extra_indent=4, wrap_width=100):\n",
-    "    indent_str = \" \" * indent_level\n",
-    "    for key, cluster in clusters.items():\n",
-    "        if key == \"_size\":\n",
-    "            continue\n",
-    "        segment = \"/\".join(key)\n",
-    "        if isinstance(cluster, tuple):\n",
-    "            num_seqs = len(cluster)\n",
-    "        else:\n",
-    "            num_seqs = cluster[\"_size\"]\n",
-    "        new_length = length + len(key[0])\n",
-    "        print(f\"{indent_str}{segment} ({new_length}nt x {num_seqs}):\")\n",
-    "        if isinstance(cluster, tuple):\n",
-    "            print(\n",
-    "                textwrap.fill(\n",
-    "                    \", \".join(cluster),\n",
-    "                    width=wrap_width,\n",
-    "                    initial_indent=\" \" * (indent_level + extra_indent),\n",
-    "                    subsequent_indent=\" \" * (indent_level + extra_indent),\n",
-    "                    break_long_words=True,\n",
-    "                )\n",
-    "            )\n",
-    "            print()\n",
-    "        else:\n",
-    "            print_clusters(cluster, length=new_length, indent_level=indent_level + 2)\n",
-    "\n",
-    "\n",
-    "print_clusters(c)"
+    "clusters = workflow.cluster_sequences_by_prefix(insert_ends)\n",
+    "workflow.print_sequence_clusters(clusters)"
    ]
   },
   {
