[shenker/microscope_design] Standardize all filter and FP spectra binning upon import. Moved spectra binning functions into util.py. Use limit_area="inside" in interpolate_dataframe.

--- a/paulssonlab/src/paulssonlab/shenker/microscope_design/Filters for FPs.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/microscope_design/Filters for FPs.ipynb
@@ -11,6 +11,7 @@
     "import re\n",
     "import requests\n",
     "import holoviews as hv\n",
+    "import hvplot.pandas\n",
     "import pint\n",
     "from cytoolz import dissoc"
    ]
@@ -23,26 +24,7 @@
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
-    "import simulation"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# u = simulation.ureg\n",
-    "class ObjProxy(object):\n",
-    "    def __init__(self, module_name, attr_name):\n",
-    "        self.__module_name = module_name\n",
-    "        self.__attr_name = attr_name\n",
-    "\n",
-    "    def __getattr__(self, name):\n",
-    "        return getattr(getattr(globals()[self.__module_name], self.__attr_name), name)\n",
-    "\n",
-    "\n",
-    "u = ObjProxy(\"simulation\", \"ureg\")"
+    "import util"
    ]
   },
   {
@@ -67,7 +49,40 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "res[0][\"spectra\"][0].keys()"
+    "def read_spectrum(id_, bins=None):\n",
+    "    df = pd.read_csv(\n",
+    "        f\"https://www.fpbase.org/spectra_csv/?q={id_}\", index_col=\"wavelength\"\n",
+    "    ).squeeze()\n",
+    "    if bins is not None:\n",
+    "        df = util.interpolate_dataframe(df, bins)\n",
+    "    return df\n",
+    "\n",
+    "\n",
+    "def get_fpbase_spectra(bins=None):\n",
+    "    fpbase_entries = requests.get(\"https://www.fpbase.org/api/proteins/spectra/\").json()\n",
+    "    fps = {}\n",
+    "    for fpbase_entry in fpbase_entries:\n",
+    "        fp = {}\n",
+    "        spectra = []\n",
+    "        for spectrum_type in fpbase_entry[\"spectra\"]:\n",
+    "            state_name = re.sub(r\"^default_\", \"\", spectrum_type[\"state\"])\n",
+    "            for k, v in spectrum_type.items():\n",
+    "                if k == \"state\":\n",
+    "                    continue\n",
+    "                elif k == \"data\":\n",
+    "                    spectra.append(\n",
+    "                        pd.DataFrame(v, columns=[\"wavelength\", state_name]).set_index(\n",
+    "                            \"wavelength\"\n",
+    "                        )\n",
+    "                    )\n",
+    "                else:\n",
+    "                    fp[f\"{state_name}_{k}\"] = v\n",
+    "        df = pd.concat(spectra, axis=1)\n",
+    "        if bins is not None:\n",
+    "            df = util.interpolate_dataframe(df, bins)\n",
+    "        fp[\"spectra\"] = df\n",
+    "        fps[fpbase_entry[\"name\"]] = fp\n",
+    "    return fps"
    ]
   },
   {
@@ -76,22 +91,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def read_spectrum(id_):\n",
-    "    df = pd.read_csv(\n",
-    "        f\"https://www.fpbase.org/spectra_csv/?q={id_}\", index_col=\"wavelength\"\n",
-    "    ).squeeze()\n",
-    "    # df.columns = [c.split(\" \")[-1] for c in df.columns]\n",
-    "    return df\n",
-    "\n",
-    "def get_fpbase_spectra():\n",
-    "    fpbase_entries = requests.get(\"https://www.fpbase.org/api/proteins/spectra/\").json()\n",
-    "    fps = {}\n",
-    "    for fpbase_entry in fpbase_entries:\n",
-    "        fp = {}\n",
-    "        fp[]\n",
-    "        fp[\"spectra\"] = {re.sub(r\"^default_\", \"\", s[\"state\"]): s for s in fpbase_entry[\"spectra\"]}\n",
-    "        res[fp[\"name\"]] = fp\n",
-    "    return fps"
+    "bins = np.arange(300, 1000)"
    ]
   },
   {
@@ -134,9 +134,11 @@
     "    \"Chroma ET665lp\": \"573\",\n",
     "}\n",
     "\n",
-    "sources = {name: read_spectrum(q) for name, q in sources.items()}\n",
-    "dichroics = {name: read_spectrum(q) for name, q in dichroics.items()}\n",
-    "longpass_filters = {name: read_spectrum(q) for name, q in longpass_filters.items()}"
+    "sources = {name: read_spectrum(q, bins=bins) for name, q in sources.items()}\n",
+    "dichroics = {name: read_spectrum(q, bins=bins) for name, q in dichroics.items()}\n",
+    "longpass_filters = {\n",
+    "    name: read_spectrum(q, bins=bins) for name, q in longpass_filters.items()\n",
+    "}"
    ]
   },
   {
@@ -146,7 +148,7 @@
    "outputs": [],
    "source": [
     "%%time\n",
-    "fps = get_fpbase_spectra()"
+    "fps = get_fpbase_spectra(bins=bins)"
    ]
   },
   {
@@ -238,7 +240,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "res[0][\"spectra\"][0]"
+    "acceptable_filter_combinations"
    ]
   },
   {
@@ -247,7 +249,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "[r[\"name\"] for r in res]"
+    "selected_filter_combinations"
    ]
   },
   {
@@ -256,7 +258,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "len(res)"
+    "fps[\"mScarlet\"][\"spectra\"].fillna(0).hvplot()"
    ]
   },
   {
@@ -265,16 +267,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "spectra_urls = {\n",
-    "    \"mCherry\": \"https://www.fpbase.org/spectra_csv/?q=79,80,158\",\n",
-    "    \"mCherry2\": \"https://www.fpbase.org/spectra_csv/?q=1451,1450\",\n",
-    "}\n",
-    "spectra = {\n",
-    "    name: pd.read_csv(url)\n",
-    "    .rename(columns={f\"{name} {kind}\": kind for kind in (\"ex\", \"em\", \"2p\")})\n",
-    "    .set_index(\"wavelength\")\n",
-    "    for name, url in spectra_urls.items()\n",
-    "}"
+    "ex = fps[\"mScarlet\"][\"spectra\"][\"ex\"]\n",
+    "em = fps[\"mScarlet\"][\"spectra\"][\"em\"]\n",
+    "ex = ex / ex.sum()\n",
+    "em = em / em.sum()"
    ]
   },
   {
@@ -283,7 +279,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bins = pd.interval_range(300, 1100, freq=5)"
+    "dichroics[\"Chroma T590lpxr\"] * ex"
    ]
   },
   {
@@ -292,9 +288,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "binned_spectra = {\n",
-    "    name: bin_spectrum(spectrum, bins) for name, spectrum in spectra.items()\n",
-    "}"
+    "hv.Curve(fps[\"mVenus\"][\"spectra\"]"
    ]
   },
   {
@@ -303,10 +297,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "(\n",
-    "    hv.Curve(spectra[\"mCherry\"][\"em\"].dropna())\n",
-    "    * hv.Curve(spectra[\"mCherry2\"][\"em\"].dropna())\n",
-    ").opts(width=800)"
+    "fps.keys()"
    ]
   },
   {
@@ -314,12 +305,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "(\n",
-    "    hv.Curve(binned_spectra[\"mCherry\"][\"em\"].dropna())\n",
-    "    * hv.Curve(binned_spectra[\"mCherry2\"][\"em\"].dropna())\n",
-    ").opts(width=800)"
-   ]
+   "source": []
   }
  ],
  "metadata": {
