[shenker/microscope_design] WIP filter selection. Implemented ex_efficiency and em_efficiency calculations.

--- a/paulssonlab/src/paulssonlab/shenker/microscope_design/Filters for FPs.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/microscope_design/Filters for FPs.ipynb
@@ -198,7 +198,7 @@
     "        ).T\n",
     "        for dc_name, dc_spectrum in dichroics.items()\n",
     "    }\n",
-    ")"
+    ").sort_values(\"ex_cutoff\")"
    ]
   },
   {
@@ -223,6 +223,7 @@
     "    acceptable_filter_combinations.groupby(level=0)\n",
     "    .apply(lambda x: x.loc[[x[\"gap\"].idxmin()]])\n",
     "    .droplevel(0)\n",
+    "    .sort_values(\"ex_cutoff\")\n",
     "    .index.values\n",
     ")"
    ]
@@ -258,7 +259,45 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fps[\"mScarlet\"][\"spectra\"].fillna(0).hvplot()"
+    "def show_heatmap(df):\n",
+    "    with pd.option_context(\n",
+    "        \"display.max_rows\", None, \"display.max_columns\", None\n",
+    "    ):  # more options can be specified also\n",
+    "        display(\n",
+    "            df.style.format(precision=2).background_gradient(cmap=\"RdPu\", axis=None)\n",
+    "        )\n",
+    "\n",
+    "\n",
+    "def fp_efficiency(dc, lp, ex, em):\n",
+    "    ex_efficiency = ((1 - dc) * (ex / ex.sum())).sum()\n",
+    "    em_efficiency = (dc * lp * (em / em.sum())).sum()\n",
+    "    ex_threshold = 0\n",
+    "    em_threshold = 0\n",
+    "    # margin from ex/em peak to cutoff\n",
+    "    return pd.Series(\n",
+    "        {\n",
+    "            \"ex_efficiency\": ex_efficiency,\n",
+    "            # \"ex_threshold\": ex_threshold,\n",
+    "            \"em_efficiency\": em_efficiency,\n",
+    "            # \"em_threshold\": em_threshold,\n",
+    "        }\n",
+    "    )\n",
+    "\n",
+    "\n",
+    "def evaluate_filter_combinations(\n",
+    "    filter_combinations, fp_names, dichroics, longpass_filters, fps\n",
+    "):\n",
+    "    d = {}\n",
+    "    for filter_combo in filter_combinations:\n",
+    "        dc = dichroics[filter_combo[0]]\n",
+    "        lp = longpass_filters[filter_combo[1]]\n",
+    "        dd = {}\n",
+    "        for fp_name in fp_names:\n",
+    "            ex = fps[fp_name][\"spectra\"][\"ex\"]\n",
+    "            em = fps[fp_name][\"spectra\"][\"em\"]\n",
+    "            dd[fp_name] = fp_efficiency(dc, lp, ex, em).to_frame().T\n",
+    "        d[filter_combo] = pd.concat(dd, axis=1).swaplevel(axis=1).sort_index(axis=1)\n",
+    "    return pd.concat(d, axis=0).droplevel(-1)"
    ]
   },
   {
@@ -267,10 +306,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ex = fps[\"mScarlet\"][\"spectra\"][\"ex\"]\n",
-    "em = fps[\"mScarlet\"][\"spectra\"][\"em\"]\n",
-    "ex = ex / ex.sum()\n",
-    "em = em / em.sum()"
+    "selected_fps = [\n",
+    "    \"mScarlet-I\",\n",
+    "    \"mScarlet-H\",\n",
+    "    \"mCherry\",\n",
+    "    \"mCherry2\",\n",
+    "    \"mKate2\",\n",
+    "    \"E2-Crimson\",\n",
+    "]\n",
+    "filter_metrics = evaluate_filter_combinations(\n",
+    "    selected_filter_combinations, selected_fps, dichroics, longpass_filters, fps\n",
+    ")"
    ]
   },
   {
@@ -279,7 +325,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dichroics[\"Chroma T590lpxr\"] * ex"
+    "show_heatmap(filter_metrics)"
    ]
   },
   {
@@ -288,24 +334,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "hv.Curve(fps[\"mVenus\"][\"spectra\"]"
+    "fps[\"mScarlet-H\"][\"spectra\"].fillna(0).hvplot() * dichroics[\n",
+    "    \"Chroma T570lpxr\"\n",
+    "].hvplot() * longpass_filters[\"Chroma ET570lp\"].hvplot()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fps.keys()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
