[shenker/microscope_design] WIP filter selection. Implemented filter_plot.

--- a/paulssonlab/src/paulssonlab/shenker/microscope_design/Filters for FPs.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/microscope_design/Filters for FPs.ipynb
@@ -12,6 +12,7 @@
     "import requests\n",
     "import holoviews as hv\n",
     "import hvplot.pandas\n",
+    "import panel as pn\n",
     "import pint\n",
     "from cytoolz import dissoc"
    ]
@@ -152,6 +153,29 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def _filter_plot(fp_name, dc_name, lp_name):\n",
+    "    return (\n",
+    "        fps[fp_name][\"spectra\"].fillna(0).hvplot()\n",
+    "        * dichroics[dc_name].hvplot()\n",
+    "        * longpass_filters[lp_name].hvplot()\n",
+    "    )\n",
+    "\n",
+    "\n",
+    "def filter_plot(\n",
+    "    fp_names=fps.keys(), dc_names=dichroics.keys(), lp_names=longpass_filters.keys()\n",
+    "):\n",
+    "    layout = pn.interact(\n",
+    "        _filter_plot, fp_name=fp_names, dc_name=dc_names, lp_name=lp_names\n",
+    "    )\n",
+    "    return pn.Row(pn.Column(\"## Filters\", layout[0]), layout[1])"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -268,7 +292,7 @@
     "        )\n",
     "\n",
     "\n",
-    "def fp_efficiency(dc, lp, ex, em):\n",
+    "def fp_efficiency(dc, lp, ex, em, ex_cutoff, em_cutoff):\n",
     "    ex_efficiency = ((1 - dc) * (ex / ex.sum())).sum()\n",
     "    em_efficiency = (dc * lp * (em / em.sum())).sum()\n",
     "    ex_threshold = 0\n",
@@ -285,17 +309,28 @@
     "\n",
     "\n",
     "def evaluate_filter_combinations(\n",
-    "    filter_combinations, fp_names, dichroics, longpass_filters, fps\n",
+    "    filter_combo_names, fp_names, dichroics, longpass_filters, filter_combinations, fps\n",
     "):\n",
     "    d = {}\n",
-    "    for filter_combo in filter_combinations:\n",
+    "    for filter_combo in filter_combo_names:\n",
     "        dc = dichroics[filter_combo[0]]\n",
     "        lp = longpass_filters[filter_combo[1]]\n",
     "        dd = {}\n",
     "        for fp_name in fp_names:\n",
     "            ex = fps[fp_name][\"spectra\"][\"ex\"]\n",
     "            em = fps[fp_name][\"spectra\"][\"em\"]\n",
-    "            dd[fp_name] = fp_efficiency(dc, lp, ex, em).to_frame().T\n",
+    "            dd[fp_name] = (\n",
+    "                fp_efficiency(\n",
+    "                    dc,\n",
+    "                    lp,\n",
+    "                    ex,\n",
+    "                    em,\n",
+    "                    filter_combinations[filter_combo][\"ex_cutoff\"],\n",
+    "                    filter_combinations[filter_combo][\"em_cutoff\"],\n",
+    "                )\n",
+    "                .to_frame()\n",
+    "                .T\n",
+    "            )\n",
     "        d[filter_combo] = pd.concat(dd, axis=1).swaplevel(axis=1).sort_index(axis=1)\n",
     "    return pd.concat(d, axis=0).droplevel(-1)"
    ]
@@ -315,7 +350,12 @@
     "    \"E2-Crimson\",\n",
     "]\n",
     "filter_metrics = evaluate_filter_combinations(\n",
-    "    selected_filter_combinations, selected_fps, dichroics, longpass_filters, fps\n",
+    "    selected_filter_combinations,\n",
+    "    selected_fps,\n",
+    "    dichroics,\n",
+    "    longpass_filters,\n",
+    "    filter_combinations,\n",
+    "    fps,\n",
     ")"
    ]
   },
@@ -334,9 +374,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fps[\"mScarlet-H\"][\"spectra\"].fillna(0).hvplot() * dichroics[\n",
-    "    \"Chroma T570lpxr\"\n",
-    "].hvplot() * longpass_filters[\"Chroma ET570lp\"].hvplot()"
+    "filter_plot(fp_names=selected_fps)"
    ]
   }
  ],
